[package]
name = "opus-php"
version = "0.1.0"
authors = ["David Cole <david.cole1340@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "opus"
crate-type = ["dylib"]

[dependencies]
ext-php-rs = "0.0.4"
audiopus = { git = "https://github.com/davidcole1340/audiopus", branch = "version_fn" }
